--- a/playground.ipynb
+++ b/playground.ipynb
@@ -11,22 +11,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n"
+     ]
     }
    ],
    "source": [
-    "2//2"
+    "for i in range(5,-1,-1):\n",
+    "    print(i)"
    ]
   },
   {
